--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <div >
             <nav>
-                <div>&#9776</div>
+                <div>&#128181;</div>
                 <ul>
                     <li><a href="#">home</a></li>
                 </ul>
