--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
             <nav>
                 <div>&#128181;</div>
                 <ul>
-                    <li><a href="#">home</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Produtos</a>
+                        <ul>
+                            <li><a href="#">produto 1</a></li>
+                            <li><a href="#">produto 2</a></li>
+                            <li><a href="#">produto 3</a></li>
+                        </ul>
+                    </li>
+
                 </ul>
             </nav>
         </div>
