--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu de Navegação</title>
 </head>
+
 <body>
     <header>
-        <div >
+        <div>
             <nav>
                 <div>&#128181;</div>
                 <ul>
@@ -19,10 +21,18 @@
                             <li><a href="#">produto 3</a></li>
                         </ul>
                     </li>
-
+                    <li><a href="#">Serviços</a>
+                        <ul>
+                            <li><a href="#">Serviços 1</a></li>
+                            <li><a href="#">Serviços 2</a></li>
+                            <li><a href="#">Serviços 3</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 </body>
+
 </html>
